--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.53",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.2",
+    "@mui/x-data-grid": "^5.0.0-beta.5",
+    "@tinymce/tinymce-react": "^3.13.0",
+    "axios": "^0.22.0",
+    "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
